<resources>
    <string name="app_name" translatable="false">Music</string>
    <string name="song" translatable="false">song</string>
    <string name="play_order" translatable="false">playorder</string>
    <string name="dir" translatable="false">dir</string>
    <string name="albm" translatable="false">album</string>
    <string name="songer" translatable="false">songer</string>
    <string name="tool_title" translatable="false">MusicPlayer</string>
    <string name="action_setting" translatable="false">Setting</string>
    <string name="action_about" translatable="false">about</string>
    <string name="delete_from_device" translatable="false">Delete from device</string>
    <string name="add_to_artist" translatable="false">Add to artist</string>
    <string name="add_to_album">Add to album</string>
    <string name="add_to_playlist" translatable="false">Add to playlist</string>
    <string name="play_next">Play Next</string>
    <string name="play">Play</string>
    <string name="shunxu_play">orderplay</string>
    <string name="suiji_play">randomplay</string>
    <string name="search">search</string>
    <string name="search_library">Search songs, artists, albums</string>
    <string name="song_name">songname</string>
    <string name="all_songs">All songs</string>
    <string name="play_share">share</string>
    <string name="search_empty_hint" translatable="false">Search by song title, artist, or album</string>
    <string name="search_no_result" translatable="false">No matching songs found</string>
    <string name="album_detail_meta" translatable="false">%1$s · %2$d songs</string>
    <string name="album_empty_message" translatable="false">No songs found in this album</string>
    <string name="artist_detail_meta" translatable="false">%1$d albums · %2$d songs</string>
    <string name="artist_empty_message" translatable="false">No songs found for this artist</string>
    <string name="artist_album_empty_message" translatable="false">No songs found in this artist album</string>
    <string name="about_version_format" translatable="false">Version %1$s</string>
    <string name="about_dialog_message" translatable="false">A simple local music player project used for Android learning and practice.</string>
    <string name="widget_description" translatable="false">Music control widget</string>
    <string name="widget_not_playing" translatable="false">Not playing</string>
    <string name="widget_action_previous" translatable="false">Previous</string>
    <string name="widget_action_play_pause" translatable="false">Play or pause</string>
    <string name="widget_action_next" translatable="false">Next</string>
    <string name="widget_tap_to_open" translatable="false">Tap to open player</string>
    <string name="widget_status_playing" translatable="false">Now playing</string>
    <string name="widget_status_paused" translatable="false">Paused</string>
    <string name="bottom_bar_empty_title" translatable="false">No song selected</string>
    <string name="bottom_bar_empty_subtitle" translatable="false">Choose a song to start playing</string>
</resources>