<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_music_control_bg"
    android:minHeight="72dp"
    android:padding="14dp">

    <ImageView
        android:id="@+id/widget_album_art"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/song_name"
        android:scaleType="centerCrop"
        android:src="@mipmap/default_image2" />

    <TextView
        android:id="@+id/widget_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/widget_album_art"
        android:layout_marginStart="12dp"
        android:background="@drawable/widget_status_chip_bg"
        android:paddingStart="8dp"
        android:paddingTop="3dp"
        android:paddingEnd="8dp"
        android:paddingBottom="3dp"
        android:text="@string/widget_status_paused"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/widget_action_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/widget_action_prev"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/widget_control_button_bg"
            android:contentDescription="@string/widget_action_previous"
            android:padding="7dp"
            android:src="@mipmap/ic_skip_previous_white_36dp" />

        <ImageView
            android:id="@+id/widget_action_play_pause"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/widget_control_button_bg"
            android:contentDescription="@string/widget_action_play_pause"
            android:padding="8dp"
            android:src="@mipmap/ic_play_white_36dp" />

        <ImageView
            android:id="@+id/widget_action_next"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/widget_control_button_bg"
            android:contentDescription="@string/widget_action_next"
            android:padding="7dp"
            android:src="@mipmap/ic_skip_next_white_36dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_toEndOf="@id/widget_album_art"
        android:layout_toStartOf="@id/widget_action_container"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widget_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/widget_song_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/widget_not_playing"
            android:textColor="#CCFFFFFF"
            android:textSize="12sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/widget_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentBottom="true"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/process_process_bar" />

</RelativeLayout>

